--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@ Cloudmend
                         
                     </div>
                     <div class="markdown column">
-                        <p>With over 5 years experience in the Industry, ⛅<strong>Cloudmend</strong> was started by <strong>Jan Wendel</strong> to provide <strong>no-bullshit, solution oriented consulting</strong> and <strong>cost effective IT-services</strong> for businessses at <strong>any scale</strong>. My mission is to build <strong>high quality, sustainable, systems</strong> and <strong>high trust relationships</strong> with my clients.</p>
+                        <p>With over 6 years experience in the Industry, ⛅<strong>Cloudmend</strong> was started by <strong>Jan Wendel</strong> to provide <strong>no-bullshit, solution oriented consulting</strong> and <strong>cost effective IT-services</strong> for businessses at <strong>any scale</strong>. My mission is to build <strong>high quality, sustainable, systems</strong> and <strong>high trust relationships</strong> with my clients.</p>
 
 <h3 id="key-competencies" class="anchor-link"><a href="#key-competencies">Key Competencies</a></h3>
 <ul>
@@ -279,7 +279,7 @@ CV in English 🇬🇧
 </a>
 </div>
 <div>
-<a href="home/cloudmend_cv_en.pdf">
+<a href="home/cloudmend_cv_de.pdf">
 CV in German 🇩🇪
 </a>
 </b>
